--- a/asset/common/menu.html
+++ b/asset/common/menu.html
@@ -4,7 +4,7 @@
 </label>
 
 <nav>
-  <a href='./'>
+  <a href='./' data-badge='3'>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 96 960 960" ><path d="M120 546V216h330v330H120Zm0 390V606h330v330H120Zm390-390V216h330v330H510Zm0 390V606h330v330H510ZM180 486h210V276H180v210Zm390 0h210V276H570v210Zm0 390h210V666H570v210Zm-390 0h210V666H180v210Zm390-390Zm0 180Zm-180 0Zm0-180Z"/></svg>
     Dashboard
   </a>
@@ -16,7 +16,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 96 960 960"><path d="M880 316v520q0 24-18 42t-42 18H140q-24 0-42-18t-18-42V316q0-24 18-42t42-18h680q24 0 42 18t18 42ZM140 425h680V316H140v109Zm0 129v282h680V554H140Zm0 282V316v520Z"/></svg>
     Bank
   </a>
-  <a href='?p=crypto'>
+  <a href='?p=crypto' data-badge='4'>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 96 960 960"><path d="m180 746 270 156V593L180 437v309Zm330 156 270-156V436L510 593v309ZM213 387l267 155 266-155-266-154-267 154Zm-93 394V406q0-16 8-30t22-22l300-173q14-8 30-8t30 8l300 173q14 8 22 22t8 30v340q0 16-8 30t-22 22L510 971q-14 8-30 8t-30-8L120 781Zm360-205Z"/></svg>
     Crypto
   </a>
