--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="shortcut icon" type="image/svg+xml" href="favicon.svg">
   <title>管理画面</title>
-  <script src="js/main.js"></script>
+  <script type='module' src="js/main.js"></script>
 </head>
 <body>
   <a class='logo' href='./'>
