--- a/asset/header.html
+++ b/asset/header.html
@@ -10,10 +10,13 @@
     <a href='?p=contact'>
       <svg class='icon' src='img/icons/question.svg'></svg>
     </a>
+    <a href='?p=user'>
+      <svg class='icon' src='img/icons/person.svg'></svg>
+    </a>
     <a href='?p=login'>
-      <svg class='icon' src='img/icons/login.svg'></svg>
+      <svg class='icon' src='img/icons/login_2.svg'></svg>
     </a>
     <a href='?p=logout'>
-      <svg class='icon' src='img/icons/logout.svg'></svg>
+      <svg class='icon' src='img/icons/logout_2.svg'></svg>
   </div>
 </nav>
