content-script run

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a class='logo' href='./'>
-    <img src='favicon.svg'/>
+    <svg src='favicon.svg'></svg>
     <span class='title'>管理画面</span>
   </a>
   <header></header>
