--- a/asset/header.html
+++ b/asset/header.html
@@ -18,5 +18,7 @@
     </a>
     <a href='?p=logout'>
       <svg class='icon' src='img/icons/logout_2.svg'></svg>
+    </a>
+    <div id='google_login'></div>
   </div>
 </nav>
