fix : google-oauth2

--- a/asset/header.html
+++ b/asset/header.html
@@ -10,15 +10,18 @@
     <a href='?p=contact'>
       <svg class='icon' src='img/icons/question.svg'></svg>
     </a>
-    <a href='?p=user'>
+    <!-- <a href='?p=user'>
       <svg class='icon' src='img/icons/person.svg'></svg>
-    </a>
-    <a href='?p=login'>
+    </a> -->
+    <!-- <a href='?p=login'>
       <svg class='icon' src='img/icons/login_2.svg'></svg>
-    </a>
-    <a href='?p=logout'>
+    </a> -->
+    <a class='logout' href='?p=logout' data-logined>
       <svg class='icon' src='img/icons/logout_2.svg'></svg>
     </a>
-    <div id='google_login'></div>
+    <div id='google_icon' data-logined>
+      <svg class='icon' src='img/icons/person.svg'></svg>
+    </div>
+    <div id='google_login' data-unlogin></div>
   </div>
 </nav>
